# NoHello

./: LICENSE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: build.yml
module/: build.gradle.kts
module/src/main/cpp/: CMakeLists.txt  PropertyManager.cpp  PropertyManager.h  log.h  mountsinfo.cpp  nohello.cpp  utils.cpp
module/template/: cleanup.sh  customize.sh  module.prop  post-fs-data.sh  service.sh  uninstall.sh
